add gallery title

--- a/index.html
+++ b/index.html
@@ -257,41 +257,49 @@
   <!-- END section -->
 
   <section class="pb_section" id="section-gallery">
-    <div class="multiple-items pb_slide_v1">
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_4.jpg" alt="" class="img-fluid">
-        </a>
+    <div class="container">
+      <div class="row justify-content-md-center text-center mb-5">
+        <div class="col-lg-7">
+          <h2 class="mt-0 heading-border-top font-weight-normal">Gallery</h2>
+        </div>
       </div>
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_2.jpg" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_3.jpg" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_4.jpg" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_1.jpg" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_2.jpg" alt="" class="img-fluid">
-        </a>
-      </div>
-      <div>
-        <a class="link-block">
-          <img src="assets/images/1900x1200_img_3.jpg" alt="" class="img-fluid">
-        </a>
+
+      <div class="multiple-items pb_slide_v1">
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_4.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_2.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_3.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_4.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_1.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_2.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/1900x1200_img_3.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
       </div>
     </div>
 
