--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
         <div class="col-lg-7">
           <div class="images">
             <img class="img1 img-fluid" src="assets/images/600x450_img_2.jpg" alt="free Template by uicookies.com">
-            <img class="img2" src="assets/images/800x500_img_1.jpg" alt="free Template by uicookies.com">
           </div>
         </div>
 
@@ -155,7 +154,6 @@
               <div class="d-lg-flex d-md-block slide_content">
                 <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_4.jpg);"></div>
                 <div class="slide_content-text text-center">
-                  <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-handcuffs"></i></div>
                   <h3 class="font-weight-normal mt-0 mb-4">Rice Husk Charcoal</h3>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
@@ -173,15 +171,15 @@
               <div class="d-lg-flex d-md-block slide_content">
                 <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_2.jpg);"></div>
                 <div class="slide_content-text text-center">
-                  <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-wallet"></i></div>
                   <h3 class="font-weight-normal mt-0 mb-4">Rice Husk Ash</h3>
-                  <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question
-                    Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia,
-                    put her initial into the belt and made herself on the way.</p>
-
-                  <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline
-                    of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road,
-                    the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                    language ocean.</p>
+                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is
+                    a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
+                    life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
+                    far World of Grammar.</p>
                 </div>
               </div>
             </div>
@@ -206,8 +204,7 @@
       <div class="row">
         <div class="col-lg-7">
           <div class="images right">
-            <img class="img1 img-fluid" src="assets/images/600x450_img_2.jpg" alt="free Template by uicookies.com">
-            <img class="img2" src="assets/images/800x500_img_1.jpg" alt="free Template by uicookies.com">
+            <img class="img1 img-fluid" src="assets/images/600x450_img_1.jpg" alt="free Template by uicookies.com">
           </div>
         </div>
         <div class="col-lg-5 pl-md-5 pl-sm-0">
@@ -267,37 +264,52 @@
       <div class="multiple-items pb_slide_v1">
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_4.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_2.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_2.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_7.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_3.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_3.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_4.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_4.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_1.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_5.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_2.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_6.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/1900x1200_img_3.jpg" alt="" class="img-fluid">
+            <img src="assets/images/6000x4000_8.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/6000x4000_9.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/6000x4000_10.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div>
+          <a class="link-block">
+            <img src="assets/images/6000x4000_11.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
