--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-practicing-areas">Product</a></li>
-          <li class="nav-item"><a class="nav-link" href="#section-why-us">Why</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-gallery">Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-attorneys">Team</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
@@ -80,11 +79,11 @@
       <div class="row">
         <div class="col-lg-5 pr-md-5 pr-sm-0">
           <h2 class="mt-0 heading-border-top mb-3 font-weight-normal">Who We Are</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-            blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-            ocean.</p>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-            paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          <p>We are an Indonesian company that supplies a wide range of rice husks for the global market. We have the
+            highest quality products and prioritize customer satisfaction.</p>
+
+          We empower local people to build the economy. We believe that with equitable economic prosperity, the world
+          will be a better place.</p>
         </div>
         <div class="col-lg-7">
           <div class="images">
@@ -103,32 +102,40 @@
       <div class="row">
         <div class="col-md">
           <div class="media pb_media_v2 d-block text-center mb-3">
-            <div class="icon border border-gray rounded-circle d-block mr-3 display-4 mx-auto mb-4"><i
-                class="flaticon text-secondary flaticon-jury"></i></div>
+            <div
+              class="icon border border-gray rounded-circle d-block mr-3 display-4 mx-auto mb-4 justify-content-md-center align-items-center">
+              <img src="assets/images/shield.png" alt="shield" width="50" height="50">
+            </div>
             <div class="media-body">
               <h3 class="mt-0 pb_font-20">Integrity</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
+              <p>Integrity is our life. Honesty, keeping promises, treating fairly and with respect is our culture.
+              </p>
             </div>
           </div>
         </div>
         <div class="col-md">
-          <div class="media pb_media_v2 d-block text-center  mb-3">
-            <div class="icon border border-gray rounded-circle d-flex mr-3 display-4 mx-auto mb-4"><i
-                class="flaticon text-secondary flaticon-law"></i></div>
+          <div class="media pb_media_v2 d-block text-center mb-3">
+            <div
+              class="icon border border-gray rounded-circle d-block mr-3 display-4 mx-auto mb-4 justify-content-md-center align-items-center">
+              <img src="assets/images/award.png" alt="shield" width="50" height="50">
+            </div>
             <div class="media-body">
               <h3 class="mt-0 pb_font-20">Quality</h3>
-              <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+              <p>
+                We maintain quality products and services that please customers to create a satisfying relationship.
+              </p>
             </div>
           </div>
         </div>
         <div class="col-md">
-          <div class="media pb_media_v2 d-block text-center  mb-3">
-            <div class="icon border border-gray rounded-circle d-flex mr-3 display-4 mx-auto mb-4"><i
-                class="flaticon text-secondary flaticon-courthouse"></i></div>
+          <div class="media pb_media_v2 d-block text-center mb-3">
+            <div
+              class="icon border border-gray rounded-circle d-block mr-3 display-4 mx-auto mb-4 justify-content-md-center align-items-center">
+              <img src="assets/images/handshake.png" alt="shield" width="50" height="50">
+            </div>
             <div class="media-body">
               <h3 class="mt-0 pb_font-20">Commitment</h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p>We continue to execute the deal well. We always prioritize customer and investor satisfaction.</p>
             </div>
           </div>
         </div>
@@ -142,7 +149,6 @@
       <div class="row justify-content-md-center text-center mb-5">
         <div class="col-lg-7">
           <h2 class="mt-0 heading-border-top font-weight-normal">Our Product</h2>
-          <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
         </div>
       </div>
 
@@ -155,14 +161,10 @@
                 <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_4.jpg);"></div>
                 <div class="slide_content-text text-center">
                   <h3 class="font-weight-normal mt-0 mb-4">Rice Husk Charcoal</h3>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                    language ocean.</p>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is
-                    a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                    life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                    far World of Grammar.</p>
+                  <p>The staple food of Indonesians is rice, so Indonesia always produces a lot of rice husks. We burn
+                    it into rice husk charcoal in the traditional way while maintaining quality. We dry the rice husks
+                    first so that the combustion process is maximized. So you can get the best rice husk charcoal at an
+                    affordable price.</p>
                 </div>
               </div>
             </div>
@@ -172,77 +174,12 @@
                 <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_2.jpg);"></div>
                 <div class="slide_content-text text-center">
                   <h3 class="font-weight-normal mt-0 mb-4">Rice Husk Ash</h3>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                    language ocean.</p>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is
-                    a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                    life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                    far World of Grammar.</p>
+                  <p>Rice husk ash is an abundantly available and renewable agriculture by product from rice
+                    milling in the rice producing countries. It has the highest proportion of silica content among all
+                    plant residues. A rice mill turns the paddy plant into 78% rice, 20% rice husk and 2% is lost in the
+                    process. The rice husk contains about 50% cellulose, 25–30% lignin and 15–20% silica. Hence, after
+                    the combustion, one-fifth to one-quarter of the rice husk will change into ash.</p>
                 </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- END section -->
-
-  <section class="pb_section" data-section="why-us" id="section-why-us">
-    <div class="container">
-      <div class="row justify-content-md-center text-center mb-5">
-        <div class="col-lg-7">
-          <h2 class="mt-0 heading-border-top font-weight-normal">Why Us</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-            blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-            ocean.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-7">
-          <div class="images right">
-            <img class="img1 img-fluid" src="assets/images/600x450_img_1.jpg" alt="free Template by uicookies.com">
-          </div>
-        </div>
-        <div class="col-lg-5 pl-md-5 pl-sm-0">
-          <div id="exampleAccordion" class="pb_accordion" data-children=".item">
-            <div class="item">
-              <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="true"
-                aria-controls="exampleAccordion1" class="pb_font-18">Reason 1</a>
-              <div id="exampleAccordion1" class="collapse show" role="tabpanel">
-                <p>Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                  language ocean.</p>
-              </div>
-            </div>
-            <div class="item">
-              <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion2" aria-expanded="false"
-                aria-controls="exampleAccordion2" class="pb_font-18">Reason 2</a>
-              <div id="exampleAccordion2" class="collapse" role="tabpanel">
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-                  paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              </div>
-            </div>
-            <div class="item">
-              <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion3" aria-expanded="false"
-                aria-controls="exampleAccordion3" class="pb_font-18">Reason 3</a>
-              <div id="exampleAccordion3" class="collapse" role="tabpanel">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                  far World of Grammar.</p>
-              </div>
-            </div>
-            <div class="item">
-              <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion4" aria-expanded="false"
-                aria-controls="exampleAccordion4" class="pb_font-18">Reason 4</a>
-              <div id="exampleAccordion4" class="collapse" role="tabpanel">
-                <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question
-                  Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia,
-                  put her initial into the belt and made herself on the way.</p>
               </div>
             </div>
           </div>
@@ -324,7 +261,6 @@
       <div class="row justify-content-md-center text-center mb-5">
         <div class="col-lg-7">
           <h2 class="mt-0 heading-border-top light font-weight-normal text-white">Team</h2>
-          <!-- <p class="text-white">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
         </div>
       </div>
       <div class="row">
@@ -335,7 +271,7 @@
             <div class="card-body">
               <h4 class="card-title mt-0 mb-2">Richard Wilson</h4>
               <h6 class="card-subtitle mb-2">Founder</h6>
-              <p>Our faith is the substance of our future. There is no big success without big sacrifice.</p>
+              <p>In order to succeed, your desire for success should be greater than your fear of failure.</p>
             </div>
           </div>
         </div>
@@ -346,8 +282,7 @@
             <div class="card-body">
               <h4 class="card-title mt-0 mb-2">Steve White</h4>
               <h6 class="card-subtitle mb-2">Co-Founder</h6>
-              <p>Many of life’s failures are people who did not realize how close they were to success when they gave
-                up.</p>
+              <p>The difference between who you are and who you want to be is what you do.</p>
             </div>
           </div>
         </div>
@@ -358,8 +293,7 @@
             <div class="card-body">
               <h4 class="card-title mt-0 mb-2">Ryan David</h4>
               <h6 class="card-subtitle mb-2">Business Development</h6>
-              <p>Many of life’s failures are people who did not realize how close they were to success when they gave
-                up.</p>
+              <p>Whenever you see a successful business, someone once made a courageous decision.</p>
             </div>
           </div>
         </div>
