--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
                   <p>Rice husk ash is an abundantly available and renewable agriculture by product from rice
                     milling in the rice producing countries. It has the highest proportion of silica content among all
                     plant residues. A rice mill turns the paddy plant into 78% rice, 20% rice husk and 2% is lost in the
-                    process. The rice husk contains about 50% cellulose, 25–30% lignin and 15–20% silica. Hence, after
-                    the combustion, one-fifth to one-quarter of the rice husk will change into ash.</p>
+                    process.</p>
                 </div>
               </div>
             </div>
@@ -322,9 +321,9 @@
           </li>
           <li>
             <span class="text-uppercase">Address</span>
-            Jl. Alamat PT Nebeng <br>
-            4th Floor8 Lower <br>
-            San Francisco street, M1 50F
+            Jl Trikolot, No. 21, Rt. 19 Rw. 04 <br>
+            Desa Cilandak, Kec. Anjatan, Kab. Indramayu <br>
+            Prov. Jawa Barat, Indonesia, 41255
           </li>
           <li>
             <a href="https://api.whatsapp.com/send?phone=+62859106948201" target="_blank" role="button"
@@ -340,21 +339,10 @@
   <!-- END section -->
 
   <footer class="pb_footer bg-light" role="contentinfo">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col">
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="#" class="p-2"><i class="fa fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="p-2"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="p-2"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col text-center">
-          <p class="pb_font-14">&copy; 2022 Universal Rice Husk. All Rights Reserved
-          </p>
-        </div>
+    <div class="row">
+      <div class="col text-center">
+        <p class="pb_font-14">&copy; 2022 Universal Rice Husk. All Rights Reserved
+        </p>
       </div>
     </div>
   </footer>
