--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Unversal Rice Husk</title>
-
+  <link rel="icon" href="assets/images/icontitle.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400"
     rel="stylesheet">
 
@@ -200,11 +200,6 @@
       <div class="multiple-items pb_slide_v1">
         <div>
           <a class="link-block">
-            <img src="assets/images/6000x4000_2.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <div>
-          <a class="link-block">
             <img src="assets/images/6000x4000_7.jpg" alt="" class="img-fluid">
           </a>
         </div>
@@ -215,32 +210,12 @@
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/6000x4000_4.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <div>
-          <a class="link-block">
             <img src="assets/images/6000x4000_5.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
           <a class="link-block">
-            <img src="assets/images/6000x4000_6.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <div>
-          <a class="link-block">
-            <img src="assets/images/6000x4000_8.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <div>
-          <a class="link-block">
             <img src="assets/images/6000x4000_9.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <div>
-          <a class="link-block">
-            <img src="assets/images/6000x4000_10.jpg" alt="" class="img-fluid">
           </a>
         </div>
         <div>
@@ -265,7 +240,7 @@
       <div class="row">
         <div class="col-md">
           <div class="card text-center pb_card_v1 mb-4">
-            <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/square_img_5.jpg"
+            <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/handshake.png"
               alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title mt-0 mb-2">Richard Wilson</h4>
@@ -276,7 +251,7 @@
         </div>
         <div class="col-md">
           <div class="card text-center pb_card_v1 mb-4">
-            <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/square_img_5.jpg"
+            <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/handshake.png"
               alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title mt-0 mb-2">Steve White</h4>
@@ -287,7 +262,7 @@
         </div>
         <div class="col-md">
           <div class="card text-center pb_card_v1 mb-4">
-            <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/square_img_5.jpg"
+            <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/handshake.png"
               alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title mt-0 mb-2">Ryan David</h4>
@@ -322,8 +297,9 @@
           <li>
             <span class="text-uppercase">Address</span>
             Jl Trikolot, No. 21, Rt. 19 Rw. 04 <br>
-            Desa Cilandak, Kec. Anjatan, Kab. Indramayu <br>
-            Prov. Jawa Barat, Indonesia, 41255
+            Desa Cilandak, Kec. Anjatan <br>
+            Kab. Indramayu, Prov. Jawa Barat <br>
+            Indonesia, 41255
           </li>
           <li>
             <a href="https://api.whatsapp.com/send?phone=+62859106948201" target="_blank" role="button"
