--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Unversal Rice Husk</title>
+  <title>Universal Rice Husk</title>
   <link rel="icon" href="assets/images/icontitle.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400"
     rel="stylesheet">
