--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-practicing-areas">Product</a></li>
           <li class="nav-item"><a class="nav-link" href="#section-gallery">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="#section-attorneys">Team</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="#section-attorneys">Team</a></li> -->
           <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
         </ul>
       </div>
@@ -229,7 +229,7 @@
   </section>
   <!-- END section -->
 
-  <section class="pb_section bg-light bg-image with-overlay" data-section="attorneys" id="section-attorneys"
+  <!-- <section class="pb_section bg-light bg-image with-overlay" data-section="attorneys" id="section-attorneys"
     style="background-image: url(assets/images/1900x1200_img_2.jpg)">
     <div class="container">
       <div class="row justify-content-md-center text-center mb-5">
@@ -273,7 +273,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <section class="pb_section" data-section="contact" id="section-contact">
